--- a/juniper.yml
+++ b/juniper.yml
@@ -1,12 +1,13 @@
 ---
 - name: Get Device Facts
   hosts: all
+  connection: local
   gather_facts: no
 
   tasks:
-    - name: Retrieve facts from devices running Junos OS
-      juniper.device.facts:
-        savedir: "{{ playbook_dir }}"
-    - name: Print version
-      debug:
-        var: junos.version
+  - name: Retrieve facts from devices running Junos OS
+    juniper.device.facts:
+     savedir: "{{ playbook_dir }}"
+  - name: Print version
+    debug:
+     var: junos.version
